{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 5899,
  "lineage": "4842d12f-28b1-4351-8f68-53b36e89994d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "Internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:980053569612:loadbalancer/app/Internal-alb/50d456cb69a2caf3",
            "arn_suffix": "app/Internal-alb/50d456cb69a2caf3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Internal-alb-2001701408.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:980053569612:loadbalancer/app/Internal-alb/50d456cb69a2caf3",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Internal-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-001824111a64ef081"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-048910affa417184d"
              },
              {
                "subnet_id": "subnet-04a4f16cf4e0fe8e2"
              }
            ],
            "subnets": [
              "subnet-048910affa417184d",
              "subnet-04a4f16cf4e0fe8e2"
            ],
            "tags": {
              "Name": "Internal_alb"
            },
            "tags_all": {
              "Name": "Internal_alb"
            },
            "vpc_id": "vpc-06c0bdc427d6ecffd",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.internal_load_sg",
            "aws_subnet.ecs_private_subnet",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:internet-gateway/igw-04986c54f7d028c1c",
            "id": "igw-04986c54f7d028c1c",
            "owner_id": "980053569612",
            "tags": {
              "Name": "ecs-igw"
            },
            "tags_all": {
              "Name": "ecs-igw"
            },
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:980053569612:listener/app/Internal-alb/50d456cb69a2caf3/66bcebb8b8852f3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:980053569612:targetgroup/internal-lb-tg/1d0353aa3c77cbf3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:980053569612:listener/app/Internal-alb/50d456cb69a2caf3/66bcebb8b8852f3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:980053569612:loadbalancer/app/Internal-alb/50d456cb69a2caf3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.Internal_alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.internal_load_sg",
            "aws_subnet.ecs_private_subnet",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:980053569612:targetgroup/internal-lb-tg/1d0353aa3c77cbf3",
            "arn_suffix": "targetgroup/internal-lb-tg/1d0353aa3c77cbf3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/v1/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:980053569612:targetgroup/internal-lb-tg/1d0353aa3c77cbf3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internal-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "internal-lb-tg"
            },
            "tags_all": {
              "Name": "internal-lb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:route-table/rtb-0898940cb890bb79b",
            "id": "rtb-0898940cb890bb79b",
            "owner_id": "980053569612",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04986c54f7d028c1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs_private_rt"
            },
            "tags_all": {
              "Name": "ecs_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecs-igw",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:route-table/rtb-00cf2880120328405",
            "id": "rtb-00cf2880120328405",
            "owner_id": "980053569612",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04986c54f7d028c1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs_public_rt"
            },
            "tags_all": {
              "Name": "ecs_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecs-igw",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08950248c3910b212",
            "route_table_id": "rtb-00cf2880120328405",
            "subnet_id": "subnet-0a2c1673f763b769d"
          },
          "dependencies": [
            "aws_internet_gateway.ecs-igw",
            "aws_route_table.ecs_public_rt",
            "aws_subnet.ecs_public_subnet",
            "aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005b454d8db278fc7",
            "route_table_id": "rtb-00cf2880120328405",
            "subnet_id": "subnet-0cc99c7dac0c308a0"
          },
          "dependencies": [
            "aws_internet_gateway.ecs-igw",
            "aws_route_table.ecs_public_rt",
            "aws_subnet.ecs_public_subnet",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0664f6d58a9ea80ac",
            "route_table_id": "rtb-0898940cb890bb79b",
            "subnet_id": "subnet-048910affa417184d"
          },
          "dependencies": [
            "aws_internet_gateway.ecs-igw",
            "aws_route_table.ecs_private_rt",
            "aws_subnet.ecs_private_subnet",
            "aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0210abfa1b1aae67c",
            "route_table_id": "rtb-0898940cb890bb79b",
            "subnet_id": "subnet-04a4f16cf4e0fe8e2"
          },
          "dependencies": [
            "aws_internet_gateway.ecs-igw",
            "aws_route_table.ecs_private_rt",
            "aws_subnet.ecs_private_subnet",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:security-group/sg-0d02e99fb57cd5a3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d02e99fb57cd5a3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20230711044739779600000004",
            "name_prefix": "terraform-",
            "owner_id": "980053569612",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_sg"
            },
            "tags_all": {
              "Name": "ecs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_load_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:security-group/sg-001824111a64ef081",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-001824111a64ef081",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20230711044739772700000003",
            "name_prefix": "terraform-",
            "owner_id": "980053569612",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internal_load_sg"
            },
            "tags_all": {
              "Name": "internal_load_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:security-group/sg-0943c9f5367a7a942",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0943c9f5367a7a942",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d02e99fb57cd5a3a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230711044741907300000007",
            "name_prefix": "terraform-",
            "owner_id": "980053569612",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg"
            },
            "tags_all": {
              "Name": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:security-group/sg-0e65efcef088ea941",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e65efcef088ea941",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001824111a64ef081"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20230711044741903500000005",
            "name_prefix": "terraform-",
            "owner_id": "980053569612",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "service-sg"
            },
            "tags_all": {
              "Name": "service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.internal_load_sg",
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:subnet/subnet-048910affa417184d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.13.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048910affa417184d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980053569612",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_private_subnet-1"
            },
            "tags_all": {
              "Name": "ecs_private_subnet-1"
            },
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:subnet/subnet-04a4f16cf4e0fe8e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.13.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a4f16cf4e0fe8e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980053569612",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_private_subnet-2"
            },
            "tags_all": {
              "Name": "ecs_private_subnet-2"
            },
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:subnet/subnet-0a2c1673f763b769d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.13.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2c1673f763b769d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980053569612",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_public_subnet-1"
            },
            "tags_all": {
              "Name": "ecs_public_subnet-1"
            },
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:subnet/subnet-0cc99c7dac0c308a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.13.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc99c7dac0c308a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980053569612",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_public_subnet-2"
            },
            "tags_all": {
              "Name": "ecs_public_subnet-2"
            },
            "vpc_id": "vpc-06c0bdc427d6ecffd"
          },
          "dependencies": [
            "aws_vpc.vpc_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:980053569612:vpc/vpc-06c0bdc427d6ecffd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.13.0.0/16",
            "default_network_acl_id": "acl-092064cce1b805766",
            "default_route_table_id": "rtb-0da6d67799b631caf",
            "default_security_group_id": "sg-082a8088a8f579d47",
            "dhcp_options_id": "dopt-089f51124e80b24ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c0bdc427d6ecffd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da6d67799b631caf",
            "owner_id": "980053569612",
            "tags": {
              "Name": "vpc_ecs"
            },
            "tags_all": {
              "Name": "vpc_ecs"
            }
          }
        }
      ]
    }
  ]
}